smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/newline-missing-after-input.smithy
// Parse error at line 6, column 24 near `output`: Expected a line break
$version: "2.0"
namespace smithy.example

operation GetFoo {
    input: GetFooInput output: GetFooOutput
}
